feature: runs as compiled js from dist folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-## node packages folder and lock.json
+## node packages folder dist folder and lock.json
 node_modules/
 package-lock.json
+dist
 
 ## dotenv
 .env
