--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "rest-api",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/server.ts",
+  "main": "./dist/server.js",
   "scripts": {
-    "dev:start": "ts-node ./src/server.ts",
-    "dev": "nodemon"
+    "clean": "rimraf dist/*",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "tsc": "tsc",
+    "build": "npm-run-all clean lint tsc",
+    "dev:start": "npm-run-all build start",
+    "dev": "nodemon",
+    "dev:typescript": "nodemon --watch src -e ts --exec ts-node ./src/server.ts",
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
@@ -13,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
+    "envalid": "^4.2.2",
     "express": "^4.16.4",
     "mongoose": "^5.4.13",
     "ts-node": "^8.0.2"
@@ -23,6 +30,9 @@
     "@types/express": "^4.16.1",
     "@types/mongoose": "^5.3.17",
     "nodemon": "^1.18.10",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.3",
+    "tslint": "^5.12.1",
     "typescript": "^3.3.3"
   }
 }
