--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "experimentalDecorators": true,
       "module": "commonjs",
       "sourceMap": true,
       "target": "es2018",
