--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "mongoose": "^5.4.13",
-    "ts-node": "^8.0.2"
+    "monk": "^6.0.6",
+    "ts-node": "^8.0.2",
+    "typegoose": "^5.6.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
