--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "envalid": "^4.2.2",
@@ -27,11 +28,14 @@
     "typegoose": "^5.6.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
+    "@types/mongoose": "^5.3.23",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
+    "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
     "tslint": "^5.12.1",
     "typescript": "^3.3.3"
