--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
     "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.3"
   }
 }
