--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^6.2.0",
     "envalid": "^4.2.2",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
     "ts-node": "^8.0.2",
     "typegoose": "^5.6.0"
@@ -30,8 +32,10 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
+    "@types/cookie-parser": "^1.4.1",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.3.23",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
