--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hasezoey/typegoose": "^5.9.1",
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
@@ -25,9 +26,9 @@
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.4.19",
-    "ts-node": "^8.0.2",
-    "typegoose": "^5.6.0"
+    "mongoose": "^5.6.13",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
