--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec npm run dev:start",
     "dev:start": "npm-run-all build start",
-    "build": "npm-run-all clean lint tsc",
+    "build": "npm-run-all clean lint webpack-build",
     "clean": "rimraf dist/*",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "webpack-build": "webpack --color --mode production --config webpack.config.js",
     "tsc": "tsc",
     "start": "node -r dotenv/config .",
     "dev:typescript": "nodemon --watch src -e ts --exec ts-node ./src/server.ts"
@@ -18,10 +19,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hasezoey/typegoose": "^5.9.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
+    "core-js": "^3.2.1",
     "dotenv": "^6.2.0",
     "envalid": "^4.2.2",
     "express": "^4.16.4",
@@ -29,7 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^8.0.2"
+    "typegoose": "^5.9.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -39,12 +40,21 @@
     "@types/express": "^4.16.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.3.23",
+    "cache-loader": "^4.1.0",
+    "fork-ts-checker-webpack-plugin": "^1.5.0",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
+    "thread-loader": "^2.1.3",
+    "ts-loader": "^6.1.0",
+    "ts-node": "^8.4.1",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.3.3"
+    "typescript": "^3.3.3",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
