--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "description": "",
   "private": true,
   "scripts": {
-    "dev": "npm-run-all server",
-    "server": "webpack-dev-server --watch --config webpack.dev.js",
-    "watch": "nodemon --watch dist --ext js --exec npm run start:main",
-    "build": "npm-run-all clean webpack:build",
+    "dev": "nodemon --watch src -e ts --exec ts-node ./src/server.ts",
+    "start": "npm-run-all clean compile start:server",
+    "start:server": "node -r dotenv/config ./dist/server.js",
     "clean": "rimraf dist/*",
-    "webpack:build": "webpack --config webpack.prod.js",
-    "start": "npm-run-all webpack:dev start:main",
-    "webpack:dev": "webpack --config webpack.dev.js",
-    "start:main": "node -r dotenv/config ./dist/main.js",
-    "dev:typescript": "nodemon --watch src -e ts --exec ts-node ./src/server.ts"
+    "compile": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -22,14 +17,12 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
-    "core-js": "^3.2.1",
     "dotenv": "^8.1.0",
     "envalid": "^4.2.2",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
-    "reflect-metadata": "^0.1.13",
     "typegoose": "^5.9.1"
   },
   "devDependencies": {
@@ -40,22 +33,11 @@
     "@types/express": "^4.16.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.3.23",
-    "cache-loader": "^4.1.0",
-    "fork-ts-checker-webpack-plugin": "^1.5.0",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
-    "thread-loader": "^2.1.3",
-    "ts-loader": "^6.1.0",
     "ts-node": "^8.4.1",
-    "tslint": "^5.12.1",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.3.3",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1",
-    "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "typescript": "^3.3.3"
   }
 }
