--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
+    "lint": "eslint --fix ./src/**/*.ts",
     "dev": "nodemon --watch src -e ts --exec ts-node ./src/server.ts",
     "start": "npm-run-all clean compile start:server",
     "start:server": "node ./dist/server.js",
@@ -33,6 +34,11 @@
     "@types/express": "^4.16.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.3.23",
+    "@typescript-eslint/eslint-plugin": "^2.3.3",
+    "@typescript-eslint/parser": "^2.3.3",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4",
