:sparkles: add lint process to start script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint --fix ./src/**/*.ts",
     "dev": "nodemon --watch src -e ts --exec ts-node ./src/server.ts",
-    "start": "npm-run-all clean compile start:server",
+    "start": "npm-run-all clean lint compile start:server",
     "start:server": "node ./dist/server.js",
     "clean": "rimraf dist/*",
     "compile": "tsc"
