--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
-    "typegoose": "^5.9.1"
+    "ts-mongoose": "0.0.19"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
