--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
+    "test": "jest",
     "lint": "eslint --fix ./src/**/*.ts",
     "dev": "nodemon --watch src -e ts --exec ts-node ./src/server.ts",
     "start": "npm-run-all clean lint compile start:server",
@@ -32,17 +33,24 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
+    "@types/jest": "^24.0.18",
     "@types/jsonwebtoken": "^8.3.2",
+    "@types/mock-req-res": "^1.1.0",
     "@types/mongoose": "^5.3.23",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "jest": "^24.9.0",
+    "mock-req-res": "^1.1.2",
+    "mockingoose": "^2.13.2",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
+    "sinon": "^7.5.0",
+    "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.3.3"
   }
