--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "clean": "rimraf dist/*",
     "compile": "tsc"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test && npm run lint",
+      "...": "..."
+    }
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -42,6 +48,7 @@
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "husky": "^3.0.9",
     "jest": "^24.9.0",
     "mock-req-res": "^1.1.2",
     "mockingoose": "^2.13.2",
